exports[`no-misused-concurrency > invalid(1): import test from 'node:test';\ntest('t', {concurrency: true}, () => {}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', {concurrency: true}, () => {});

`;

exports[`no-misused-concurrency > invalid(1): import test from 'node:test';\ntest('t', {concurrency: true}, () => {}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', {concurrency: true}, () => {});
    |            ^^^^^^^^^^^^^^^^^ The \`concurrency\` option has no effect on a test without subtests. It only controls how a suite or a test's subtests run concurrently.

`;

exports[`no-misused-concurrency > invalid(10): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', {concurrency: true}, t => { t.assert.ok(1); }); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('t', {concurrency: true}, t => { t.assert.ok(1); });

`;

exports[`no-misused-concurrency > invalid(10): import test from 'node:test';\nimport assert from 'node:assert';\ntest('t', {concurrency: true}, t => { t.assert.ok(1); }); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
> 3 | test('t', {concurrency: true}, t => { t.assert.ok(1); });
    |            ^^^^^^^^^^^^^^^^^ The \`concurrency\` option has no effect on a test without subtests. It only controls how a suite or a test's subtests run concurrently.

`;

exports[`no-misused-concurrency > invalid(11): import {describe, test} from 'node:test';\ndescribe('s', () => { test('t', {concurrency: true}, () => {}); }); 1`] = `

  1 | import {describe, test} from 'node:test';
  2 | describe('s', () => { test('t', {concurrency: true}, () => {}); });

`;

exports[`no-misused-concurrency > invalid(11): import {describe, test} from 'node:test';\ndescribe('s', () => { test('t', {concurrency: true}, () => {}); }); 2`] = `

Message:
  1 | import {describe, test} from 'node:test';
> 2 | describe('s', () => { test('t', {concurrency: true}, () => {}); });
    |                                  ^^^^^^^^^^^^^^^^^ The \`concurrency\` option has no effect on a test without subtests. It only controls how a suite or a test's subtests run concurrently.

`;

exports[`no-misused-concurrency > invalid(12): import test from 'node:test';\ntest('a', {concurrency: true}, (this: void, t) => { t.todo('b'); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('a', {concurrency: true}, (this: void, t) => { t.todo('b'); });

`;

exports[`no-misused-concurrency > invalid(12): import test from 'node:test';\ntest('a', {concurrency: true}, (this: void, t) => { t.todo('b'); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('a', {concurrency: true}, (this: void, t) => { t.todo('b'); });
    |            ^^^^^^^^^^^^^^^^^ The \`concurrency\` option has no effect on a test without subtests. It only controls how a suite or a test's subtests run concurrently.

`;

exports[`no-misused-concurrency > invalid(2): import test from 'node:test';\ntest('t', {concurrency: 5}, () => {}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', {concurrency: 5}, () => {});

`;

exports[`no-misused-concurrency > invalid(2): import test from 'node:test';\ntest('t', {concurrency: 5}, () => {}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', {concurrency: 5}, () => {});
    |            ^^^^^^^^^^^^^^ The \`concurrency\` option has no effect on a test without subtests. It only controls how a suite or a test's subtests run concurrently.

`;

exports[`no-misused-concurrency > invalid(3): import test from 'node:test';\ntest('t', {concurrency: 0}, () => {}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', {concurrency: 0}, () => {});

`;

exports[`no-misused-concurrency > invalid(3): import test from 'node:test';\ntest('t', {concurrency: 0}, () => {}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', {concurrency: 0}, () => {});
    |            ^^^^^^^^^^^^^^ The \`concurrency\` option has no effect on a test without subtests. It only controls how a suite or a test's subtests run concurrently.

`;

exports[`no-misused-concurrency > invalid(4): import test from 'node:test';\nconst limit = 4;\ntest('t', {concurrency: limit}, () => {}); 1`] = `

  1 | import test from 'node:test';
  2 | const limit = 4;
  3 | test('t', {concurrency: limit}, () => {});

`;

exports[`no-misused-concurrency > invalid(4): import test from 'node:test';\nconst limit = 4;\ntest('t', {concurrency: limit}, () => {}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | const limit = 4;
> 3 | test('t', {concurrency: limit}, () => {});
    |            ^^^^^^^^^^^^^^^^^^ The \`concurrency\` option has no effect on a test without subtests. It only controls how a suite or a test's subtests run concurrently.

`;

exports[`no-misused-concurrency > invalid(5): import test from 'node:test';\ntest({name: 't', concurrency: true, fn() {}}); 1`] = `

  1 | import test from 'node:test';
  2 | test({name: 't', concurrency: true, fn() {}});

`;

exports[`no-misused-concurrency > invalid(5): import test from 'node:test';\ntest({name: 't', concurrency: true, fn() {}}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test({name: 't', concurrency: true, fn() {}});
    |                  ^^^^^^^^^^^^^^^^^ The \`concurrency\` option has no effect on a test without subtests. It only controls how a suite or a test's subtests run concurrently.

`;

exports[`no-misused-concurrency > invalid(6): import {it} from 'node:test';\nit('t', {concurrency: true}, () => {}); 1`] = `

  1 | import {it} from 'node:test';
  2 | it('t', {concurrency: true}, () => {});

`;

exports[`no-misused-concurrency > invalid(6): import {it} from 'node:test';\nit('t', {concurrency: true}, () => {}); 2`] = `

Message:
  1 | import {it} from 'node:test';
> 2 | it('t', {concurrency: true}, () => {});
    |          ^^^^^^^^^^^^^^^^^ The \`concurrency\` option has no effect on a test without subtests. It only controls how a suite or a test's subtests run concurrently.

`;

exports[`no-misused-concurrency > invalid(7): import test from 'node:test';\ntest('t', async t => { await t.test('inner', {concurrency: true}, () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', async t => { await t.test('inner', {concurrency: true}, () => {}); });

`;

exports[`no-misused-concurrency > invalid(7): import test from 'node:test';\ntest('t', async t => { await t.test('inner', {concurrency: true}, () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', async t => { await t.test('inner', {concurrency: true}, () => {}); });
    |                                               ^^^^^^^^^^^^^^^^^ The \`concurrency\` option has no effect on a test without subtests. It only controls how a suite or a test's subtests run concurrently.

`;

exports[`no-misused-concurrency > invalid(8): import test from 'node:test';\ntest('t', {concurrency: true}, async t => { await t.test('a', {concurrency: true}, () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', {concurrency: true}, async t => { await t.test('a', {concurrency: true}, () => {}); });

`;

exports[`no-misused-concurrency > invalid(8): import test from 'node:test';\ntest('t', {concurrency: true}, async t => { await t.test('a', {concurrency: true}, () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', {concurrency: true}, async t => { await t.test('a', {concurrency: true}, () => {}); });
    |                                                                ^^^^^^^^^^^^^^^^^ The \`concurrency\` option has no effect on a test without subtests. It only controls how a suite or a test's subtests run concurrently.

`;

exports[`no-misused-concurrency > invalid(9): import test from 'node:test';\ntest('t', {concurrency: true}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', {concurrency: true});

`;

exports[`no-misused-concurrency > invalid(9): import test from 'node:test';\ntest('t', {concurrency: true}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', {concurrency: true});
    |            ^^^^^^^^^^^^^^^^^ The \`concurrency\` option has no effect on a test without subtests. It only controls how a suite or a test's subtests run concurrently.

`;
